--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -26,9 +26,6 @@
       <i class="fa fa-check"></i>
       save
     <% end %>
-
-    <%= button_tag books_path, method: :get, class: 'btn btn--cancel' do %>
-      cancel
-    <% end %>
+    <%= link_to "cancel", books_path, class: 'btn btn--cancel' %>
   <% end %>
 </div>
